mongo db file path

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/blogDB
+# MONGO_URI=mongodb://localhost:27017/blogDB
+MONGO_URI=mongodb+srv://canol:Test%40net@fooddb.k8qme.mongodb.net/foodDB?retryWrites=true&w=majority&appName=foodDB
 PORT=3000
